src/snapshots/libflatterer__tests__array_object-2.snap
---
source: src/lib.rs
expression: output

---
- "table_name,field_name,field_type,field_title,count"
- "main,_link,text,_link,1"
- "main,aaa_foo,text,aaa_foo,1"

