src/snapshots/libflatterer__tests__array_object.json-data_package.json.snap
---
source: src/lib.rs
assertion_line: 1892
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: main
    schema:
      fields:
        - name: _link
          type: text
          count: 1
        - name: aaa_foo
          type: text
          count: 1
      primaryKey: _link
    path: csv/main.csv

