src/snapshots/libflatterer__tests__array_object.json-fields.csv.snap
---
source: src/lib.rs
expression: output
---
- "table_name,field_name,field_type,field_title,count"
- "main,_link,integer,_link,1"
- "main,aaa_foo,text,aaa_foo,1"

