src/snapshots/libflatterer__tests__array_object.snap
---
source: src/lib.rs
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: main
    schema:
      fields:
        - name: _link
          type: text
          count: 1
        - name: aaa_foo
          type: text
          count: 1
      primaryKey: _link
    path: csv/main.csv

