src/snapshots/libflatterer__tests__array_str_after_stream.json-data_package.json.snap
---
source: src/lib.rs
assertion_line: 1907
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: moo
    schema:
      fields:
        - name: _link
          type: text
          count: 2
        - name: _link_main
          type: text
          count: 2
        - name: a
          type: text
          count: 2
      primaryKey: _link
    path: csv/moo.csv
  - profile: tabular-data-resource
    name: main
    schema:
      fields:
        - name: _link
          type: text
          count: 1
        - name: flags
          type: text
          count: 1
      primaryKey: _link
    path: csv/main.csv

