src/snapshots/libflatterer__tests__array_str_after_stream.json-fields.csv.snap
---
source: src/lib.rs
assertion_line: 1913
expression: output

---
- "table_name,field_name,field_type,field_title,count"
- "moo,_link,text,_link,2"
- "moo,_link_main,text,_link_main,2"
- "moo,a,text,a,2"
- "main,_link,text,_link,1"
- "main,flags,text,flags,1"

