src/snapshots/libflatterer__tests__array_str_after_stream.json-tables.csv.snap
---
source: src/lib.rs
assertion_line: 1913
expression: output

---
- "table_name,table_title"
- "moo,moo"
- "main,main"

